fixed spacing of logo and padding on home page

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -142,4 +142,10 @@ main {
         margin-right: 10px;
     }
 }
+
+@media (min-width: 1000px){
+    .wrapper {
+        padding-top: 135px;
+    }
+}
 }
